[package]
name = "pactui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
thiserror = "2.0.11"
ratatui = "0.29.0"
