[package]
name = "pactui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.0"
thiserror = "2.0.11"
ratatui = "0.29.0"
